# push_pull_kan

./: EMA_C_W_py.ipynb  EMA_W_C.py  EMA_W_C_py.ipynb  README.md  __init__.py  evaluation.py  kanlayer.py  plotting.py  preparing_data (1).py  push_pull.py  pyproject.toml
Model/: EMA_C_W.py  evaluation.py  kanlayer.py  plotting.py  preparing_data.py  push_pull.py  setup.py
