[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "push-pull-kan"
version = "0.1.0"
description = "Push–Pull KAN experiments"
readme = "README.md"
authors = [{name = "Layla Abu Khalaf"}]
requires-python = ">=3.9"
dependencies = ["torch>=2.1"]

[tool.setuptools]
packages = ["push_pull_kan"]
