[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "push-pull-kan"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
package-dir = {"" = "model"}  # code lives under model/

[tool.setuptools.packages.find]
where = ["model"]
